--- a/index.html
+++ b/index.html
@@ -1,14 +1,68 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>curriculum</title>
+
+
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 <body>
-    <h1>holi</h1>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+        <div class="container">
+            <a class="navbar-brand" href="#">
+                <h1>Tomas Rodrioguez</h1>
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav ms-auto mb-2 mb-lg-0 fs-5">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Acerca de mi</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Trabajos</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Contacto</a>
+                    </li>
+
+                </ul>
+
+            </div>
+        </div>
+    </nav>
+    
+    <h3>acerca de mi</h3>
+    <img src="./assets/img/Captura de pantalla 2024-03-15 183642.png" alt="foto Tomas" width="200">
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eius nobis incidunt vel delectus asperiores reiciendis, ipsam itaque. Quaerat, necessitatibus aliquid. Sed officia magni, error adipisci reprehenderit consequuntur. Dignissimos, labore? Cum.</p>
+    <h3>estudios</h3>
+    <ol>
+    <li>estudios basicos</li>  
+    <li>estudios medios</li>    
+    <li>cursando de informatica</li>    
+     </ol>
+     <h3>habilidades</h3>
+     <ul>
+        <li>habilidad 1</li>
+        <li>habilidad 2</li>
+        <li>habilidad 3</li>
+     </ul>
+     <h3>Enlaces</h3>
+     <a href="https://www.instagram.com/tvmaa.s/" target="_blank">instagram</a>
+     <a href="portafolio.html" >portafolio</a>  
 
 
 
+
+
+
+
+
+     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
