--- a/portafolio.html
+++ b/portafolio.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>portafolio</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 <body>
 
@@ -13,29 +14,38 @@
     <table>
         <tr>
             <th>curriculum vitae</th>
-            <th><img src="./assets/img/foto tomy.jpg" alt="curriculum" width="200"></th>
+            <th><img src="./assets/img/foto tomy.jpg" alt="Desafio 1" width="200"></th>
         </tr>
         <tr>
-            <td>Proyecto 2</td>
-            <td>
-                <del>Imagen Proyecto 2</del>
-            </td>
+            <th>Venta de edificios</th>
+            <th><img src="./assets/img/Desafio 2.png" alt="Desafio 2" width="200"></th>
         </tr>
         <tr>
-            <td>Proyecto 3</td>
-            <td>
-                <del>Imagen Proyecto 3</del>
-            </td>
+            <th>Iguanas</th>
+            <th><img src="./assets/img/Desafio 3.png" alt="Desafio 3" width="200"></th>
         </tr>
         <tr>
-            <td>Proyecto 4</td>
-            <td>
-                <del>Imagen Proyecto 4</del>
-            </td>
+            <th>Cuppon</th>
+            <th><img src="./assets/img/Desafio 4.png" alt="Desafio 4" width="200"></th>
+        </tr>
+        <tr>
+            <th>Ratita</th>
+            <th><img src="./assets/img/Desafio 5.png" alt="Desafio 5" width="200"></th>
         </tr>
     </table>
 
-    <a href="index.html">volver</a>
+    
+    <button type="button" class="btn btn-outline-dark"><a href="index.html">volver</a></button>
 
+
+
+
+
+
+
+
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
