--- a/index.html
+++ b/index.html
@@ -1,72 +1,78 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>curriculum</title>
-
-
-
+    <title>Tomas Rodriguez</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./assets/css/style.css">
+    <script src="https://kit.fontawesome.com/490d5bc859.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-        <div class="container">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top montserrat">
+        <div class="container-fluid">
             <a class="navbar-brand" href="#">
-                <h1>Tomas Rodrioguez</h1>
+                <i class="fa-solid fa-house"></i>
+                <span class="fw-bold"></span>
             </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav ms-auto mb-2 mb-lg-0 fs-5">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0 nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Acerca de mi</a>
+                        <a class="nav-link active" aria-current="page" href="#">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Trabajos</a>
+                        <a class="nav-link" href="./portafolio.html">Portafolio</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Contacto</a>
-                    </li>
-
                 </ul>
-                <form class="d-flex">
-                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-success" type="submit">Search</button>
-                  </form>
-
             </div>
         </div>
     </nav>
-    
-    <h3>acerca de mi</h3>
-    <img src="./assets/img/Captura de pantalla 2024-03-15 183642.png" alt="foto Tomas" width="200">
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eius nobis incidunt vel delectus asperiores reiciendis, ipsam itaque. Quaerat, necessitatibus aliquid. Sed officia magni, error adipisci reprehenderit consequuntur. Dignissimos, labore? Cum.</p>
-    <h3>estudios</h3>
-    <ol>
-    <li>estudios basicos</li>  
-    <li>estudios medios</li>    
-    <li>cursando de informatica</li>    
-     </ol>
-     <h3>habilidades</h3>
-     <ul>
-        <li>habilidad 1</li>
-        <li>habilidad 2</li>
-        <li>habilidad 3</li>
-     </ul>
-     <h3>Enlaces</h3>
-     <a href="https://www.instagram.com/tvmaa.s/" target="_blank">instagram</a>
-     <a href="portafolio.html" >portafolio</a>  
+        <div class="col-md-3 mx-auto">
+            <img src="./assets/img/yo playa.png" class="img-fluid rounded-start" alt="Tomás Rodríguez" />
+            <div class="card-body">
+                <h3><i class="fa-solid fa-user"></i> Tomás Rodríguez</h3>
+            </div>
+        </div>
+    </section>
+    <div class="px-4 py-5 my-5 text-center montserrat">
+        <h1 class="display-5 fw-bold text-body-emphasis margen-hero">
+            <i class="fa-solid fa-code"></i> Estudiante de Fullstack dev.
+        </h1>
+        <div class="col-lg-6 mx-auto">
+            <p class="lead mb-4">Hola, soy Tomás Rodríguez. Estoy comenzando en el mundo del desarrollo y me encanta trabajar en equipo. Siempre busco crear buenas conexiones profesionales y resolver problemas de manera creativa. Además, me esfuerzo por aportar energía, enfoque en los objetivos y una buena comprensión del contexto en cada proyecto en el que participo.</p>
+        </div>
+        <h3>Estudios</h3>
+        <p>
+            Enseñanza basica completa <br>
+            Enseñanza medio completa<br>
+            Cursando informática
+        </p>
+       
+        <h3>Habilidades</h3>
+        <p>
+            Javascript<br>
+            React<br>
+            CSS avanzado
 
+        </p>
+    </div>
+    <footer class="bg-dark text-center text-light p-4">
+        <a href="https://github.com/Jaime132132"><i class="fa-brands fa-github"></i></a>
+        <a href="https://www.instagram.com/tvmaa.s/"><i class="fa-brands fa-instagram"></i></a>
+        <a href="mailto:tomasitoalegandro02@gmail.com"><i class="fa-solid fa-envelope"></i></a>
+        <br><br>
+        <p class="mb-0">Tomás Rodríguez 2024. Todos los derechos reservados.</p>
+    </footer>
 
-
-
-
-
-
-
-     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
+
 </html>
